cif/org.eclipse.escet.cif.tests/tests/cif2supremica/invalid3.cif.cif2supremica.err
ERROR: CIF to Supremica transformation failed due to unsatisfied preconditions:
 - Discrete variable has multiple potential initial values (any value in its domain):
   - In automaton "p":
     - disc bool b in any;
                 ^
 - Failed to determine whether a location is an initial location, as one of its initialization predicates cannot be statically evaluated:
   - In automaton "p":
     - initial b;
               ^
